    code from Andris Zeila, see
    http://sourceforge.net/tracker/?func=detail&aid=2792252&group_id=149725&atid=775376
  (2009-05-21, HA)
  * fixed "Broken build in Msys and C++ tests fail":
    fixed USE_WIN32_CRIT_SECT implementation in sem_inc.c, mingw now uses this one
    added make section for OSTYPE=msys-sh, which uses mingw32-gcc/g++ and rm
  (2009-05-23, HA)

2.5.15
  * added alternative locking implementation in sem_inc.c
    using critical sections.
    code from Peter Harris, see
    http://code.google.com/p/electric-fence-win32/
  * added Windows Threading to testmt.c
    added win32-msvc.net project file
  * use of WIN32_SEMAPHORES on Win32-Cygwin in sem_inc.c
      - the locking mechanism for multi-threading,
      with this configuration testmt.c works either
      with pthreads and with the Win32 API
  * CreateSemaphore() now used with maximum count = initial count = 1
  (2008-08-03, HA)
  * removed usage of strlen() in strncpy()
  (2009-03-19, HA)
  * PATCH from Andre Landwehr <andrel@cybernoia.de>
    fixes race condition when using preprocessor macro 'delete'
  (2009-04-07, HA)
  * bugfix in strncpy()
    Roman Jokl reported the bug: error check was too rigorous
  (2009-04-11, HA)

2.5.14
  * added suggested ~/.gdbinit as gdbinit.rc
  * added hint in mprotectFailed()
  * removed (gcc) compiler warnings
  * rename of sem_inc.h to duma_sem.h, cause needed by dumapp.h
  (2008-03-12, HA)
  * update of README for Microsoft's pageheap.exe,
    a built in heap debugging tool
  (2008-04-20, HA)
  * PATCH from Philip Mucci <mucci@cs.utk.edu> on behalf of SiCortex
  * Fix for malloc(0) which previously always returned NULL.
    added environment switch DUMA_MALLOC_0_STRATEGY, which may
      return a special protected piece of memory for malloc(0)
  * Moved malloc/SHOW_ALLOC printouts before all abort checks
  (2008-04-20, Philip Mucci, HA)
  * remove some warnings for "-Wall -Wextra" especially for cygwin